# VPP_Pricing

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
docs/: analysis_results.json  historical_backtest_results.md  input_contract.md  literature_comparison.md  methodology.md  practical_vpp_pricing.md
examples/: demand_response.json  industrial_site.json  merchant_bess.json  quarter_hourly_portfolio.json  renewable_hybrid.json  run_analyses.py  run_rl_analysis.py  sample_portfolio.json  storage_only.json
examples/data/: day_ahead_prices.csv  extended_scenarios.csv  historical_products.csv  quarter_hourly_scenarios.csv  scenario_prices.csv  summer_day_scenarios.csv  week_scenarios.csv
src/vpp_pricing/: __init__.py  assets.py  backtest.py  cli.py  comparison.py  diagnostics.py  market.py  portfolio.py  practical.py  pricing.py  results.py  risk.py  validation.py
src/vpp_pricing/methods/: __init__.py  base.py  gan.py  intrinsic.py  monte_carlo.py  reinforcement_learning.py  rolling_intrinsic.py
tests/: test_assets.py  test_backtest.py  test_comparison.py  test_gan.py  test_monte_carlo.py  test_practical.py  test_pricing.py  test_reinforcement_learning.py  test_risk.py  test_validation.py
