[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vpp-pricing"
version = "0.1.0"
description = "Virtual Power Plant modeling and pricing toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "VPP Pricing" }
]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
vpp-price = "vpp_pricing.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
