[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vpp-pricing"
version = "0.4.0"
description = "Research toolkit for validating and comparing Virtual Power Plant pricing methodologies"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "VPP Pricing Research" }
]
keywords = [
  "virtual-power-plant",
  "energy-trading",
  "pricing",
  "monte-carlo",
  "risk-management",
  "battery-storage",
  "renewable-energy",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
analysis = [
  "matplotlib>=3.8",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.8",
]

[project.scripts]
vpp-price = "vpp_pricing.cli:main"

[tool.setuptools]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
